# HR

backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0759fce7c8d5_update_model.py  1914cee21519_update_model.py  1fc185c607b0_update.py  68b3b50675a2_update_record.py  74d125d098c4_update_model.py  cbcab5d8711b_model_update.py  f79abda44fd8_add_migration.py
backend/src/: database.py  main.py  schemas.py
backend/src/auth/: auth_dependencies.py  auth_utils.py
backend/src/models/: __init__.py  attendance.py  leave.py  profile.py  user.py
backend/src/routers/: __init__.py
backend/src/routers/helpers/: attendance_utils.py  image_utils.py
backend/src/routers/models/: admin_db.py  attendance_db.py  leave_db.py  login_db.py  profile_db.py  signup_db.py
backend/src/routers/services/: admin.py  attendance.py  leave.py  login.py  profile.py  signup.py
backend/src/utils/: password_hashing.py
backend/tests/: conftest.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  main.tsx
frontend/src/api/: apiClient.ts
frontend/src/components/Navbar/: Navbar.tsx
frontend/src/components/authentication/: auth.ts
frontend/src/contexts/: ProfileContext.tsx
frontend/src/helper/: ProtectedRoute.tsx
frontend/src/hooks/: useAttendance.ts  useLeave.ts
frontend/src/pages/: AdminDashboard.tsx  Attendance.tsx  Dashboard.tsx  Leave.tsx  Login.tsx  PermissionDenied.tsx  Profile.tsx  SignUp.tsx  api.ts
